# mcp-serve

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE.md  README.md  dprint.json
.agents/commands/: design.md  feature.md  plan.md  spec.md  work.md
.claude/: settings.json
.claude/commands/: design.md  feature.md  plan.md  spec.md  work.md
.gemini/: settings.json
.gemini/commands/: design.toml  feature.toml  plan.toml  spec.toml  work.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: design.md  feature.md  research.md  spec.md  task.md
.github/actions/setup-environment/: action.yml
.github/workflows/: ci.yml  claude.yml  pr-title-check.yml
docs/: Design.md
examples/tools/: README.md  calculator  calculator.yaml  create-ticket  file-info.sh  non-executable.txt  simple-exe
scripts/: build-release.sh  build-target.sh
src/: definitions.rs  lib.rs  main.rs  scanner.rs  tool_discovery.rs
src/tool_discovery/: definitions.rs  mod.rs  scanner.rs
tests/: integration_test.rs
