[package]
name = "mcp-serve"
version = "0.1.0"
authors = ["Ian MacLeod <ian@nevir.net>"]
edition = "2021"
homepage = "https://github.com/nevir/mcp-serve"
license = "BlueOak-1.0.0"
repository = "https://github.com/nevir/mcp-serve"
description = "A foundational Rust CLI application for building MCP (Model Context Protocol) servers"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
faccess = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"

[[bin]]
name = "mcp-serve"
path = "src/main.rs"
